Backport of 3.1.0 version to 1.20.1